--- a/.hintrc
+++ b/.hintrc
@@ -1,5 +1,13 @@
 {
   "extends": [
     "development"
-  ]
+  ],
+  "hints": {
+    "axe/time-and-media": [
+      "default",
+      {
+        "meta-refresh": "off"
+      }
+    ]
+  }
 }
